Implement concurrent processing for reindexing across collections
- Refactored reindexing functions for balances, identities, ledgers, reconciliations, and transactions to process document chunks concurrently.
- Introduced a new `processBatchesConcurrently` function to handle concurrent upserts, improving performance.
- Updated configuration to include a `Concurrency` setting for controlling the number of concurrent workers.
- Adjusted logging to reflect the new concurrency feature and its impact on processing.

--- a/config.json
+++ b/config.json
@@ -13,9 +13,8 @@
     "bulk_size": 2000,
     "progress_interval": 100000
   },
-  "collections_to_skip": [],
+  "collections_to_index": ["ledgers", "identities", "balances", "reconciliations", "transactions"],
   "time_range": {
-    "enabled": false,
     "start_time_utc": "",
     "end_time_utc": ""
   }
